--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             <div class="combine">
             <div class="picture">
-                    <img src="Assets/me.jpg" alt="IMH">
+                    <img src="Assets/me.JPG" alt="IMH">
             </div>
             <div class="intro">
                 <h2>Introduction</h2>
